suncoder-k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: suncoder-app
spec:
  selector:
    matchLabels:
      app: suncoder-app
  template:
    metadata:
      labels:
        app: suncoder-app
    spec:
      containers:
      - name: suncoder-app
        image: flavioheartnet/suncoder:64
        resources:
            requests: 
              cpu: "0.05"
              memory: 20Mi
            limits:
              cpu: "0.05"
              memory: 25Mi
        ports:
        - containerPort: 3000
