suncoder-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: suncoder-app-service
spec:
  selector:
    app: suncoder-app
  type: ClusterIP  
  ports:
  - port: 3000
    targetPort: 3000
